--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,9 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <div class='title'>Predict My Pasta!!</div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
-      all three!
+      Place images of your perfect <strong>pasta</strong>, preferably pretty pasta, pretty please!
     </p>
     <div class='content'>
       <div class='no-display'>
