--- a/app/view/index.html
+++ b/app/view/index.html
@@ -1,5 +1,6 @@
 <html lang='en'>
 <head>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
   <meta charset='utf-8'>
   <link rel='stylesheet' href='../static/style.css'>
   <script src='../static/client.js'></script>
