--- a/app/view/index.html
+++ b/app/view/index.html
@@ -8,9 +8,9 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Predict My Pasta!!</div>
+    <div class='title'>What Plant is This?</div>
     <p>
-      Place images of your perfect <strong>pasta</strong>, preferably pretty pasta, pretty please!
+      Place images of your perfect <strong>plant bois</strong>, pretty please!
     </p>
     <div class='content'>
       <div class='no-display'>
